fix align slider & fix small bugs

--- a/app/blocks/project/project.styl
+++ b/app/blocks/project/project.styl
@@ -7,6 +7,12 @@
 	&__slider
 		overflow hidden
 
+		.slick-slider
+			left -276px
+
+			+mobile()
+				left 0
+
 	+mobile()
 		width 640px
 
